--- a/Examples/GP/index.html
+++ b/Examples/GP/index.html
@@ -4,11 +4,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<title>EasyAzureFunction - Get-Process- input parameters</title>
 </head>
 
 <body>
 <div class="container">
-<form action='' method='post'>
+<form method='post'>
 <h1>Get-Process</h1>
 <hr>
 <input type='hidden' name='EzInvokeCommand' value='1'>
@@ -90,6 +91,11 @@
   <input type='checkbox' name=EzIncludeUserName value=1>
   <label class='form-check-label'>* IncludeUserName</label>
 </div>
-<p></p><input type=submit value='  Run Get-Process  ' class='btn btn-primary btn-block py-3'></div>
+<p></p><input type=submit value='  Run Get-Process  ' class='btn btn-primary btn-block py-3'>
+</form>
+<p></p>
+<div class="bg-info">Created with EasyAzureFunction module <a href="https://github.com/iricigor/EasyAzureFunction"><span class="glyphicon glyphicon-link"></span></a>
+ by Igor Iric <a href="mailto:iricigor@gmail.com?Subject=EasyAzureFunction"><span class="glyphicon glyphicon-envelope"></span></a></div>
+</div>
 </body>
 </html>
