--- a/Examples/HW/index.html
+++ b/Examples/HW/index.html
@@ -4,11 +4,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<title>EasyAzureFunction - Hello- input parameters</title>
 </head>
 
 <body>
 <div class="container">
-<form action='' method='post'>
+<form method='post'>
 <h1>Hello</h1>
 <hr>
 <input type='hidden' name='EzInvokeCommand' value='1'>
